--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,9 +54,10 @@
             android:layout_width="90dp"
             android:layout_height="70dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/btn_star"
-            tools:layout_editor_absoluteX="137dp" />
+            app:srcCompat="@android:drawable/btn_star" />
 
         <ImageButton
             android:id="@+id/botonInicio"
@@ -165,6 +166,7 @@
                     android:layout_height="match_parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -190,8 +192,8 @@
 
                     <ImageView
                         android:id="@+id/nombreFlor2"
-                        android:layout_width="182dp"
-                        android:layout_height="44dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="24dp"
                         android:src="@drawable/nombre2"
@@ -200,9 +202,10 @@
 
                     <ImageButton
                         android:id="@+id/botonMeGusta2"
-                        android:layout_width="95dp"
-                        android:layout_height="71dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
+                        android:layout_marginTop="4dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="18dp"
                         android:background="#00FFFFFF"
@@ -211,9 +214,10 @@
                         android:src="@drawable/nolike"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.466"
 
+                        app:layout_constraintHorizontal_bias="0.466"
                         app:layout_constraintStart_toEndOf="@+id/nombreFlor2"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                         tools:ignore="DuplicateIds" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -224,6 +228,7 @@
                     android:layout_height="match_parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -231,7 +236,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
 
-                        <ImageView
+                        <ImageButton
                             android:id="@+id/imagenFlor3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -240,27 +245,27 @@
                             android:layout_marginBottom="8dp"
                             android:background="#00FFFFFF"
                             android:onClick="goFlower3"
+                            android:src="@drawable/tulipan"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@android:drawable/ic_dialog_map" />
+                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <ImageView
                         android:id="@+id/nombreFlor3"
-                        android:layout_width="182dp"
-                        android:layout_height="44dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@android:drawable/ic_lock_idle_lock" />
+                        android:src="@drawable/nombre3" />
 
                     <ImageButton
                         android:id="@+id/botonMeGusta3"
-                        android:layout_width="95dp"
-                        android:layout_height="71dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="18dp"
@@ -272,6 +277,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.466"
                         app:layout_constraintStart_toEndOf="@+id/nombreFlor3"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
                         app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -282,6 +288,7 @@
                     android:layout_height="match_parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -298,30 +305,29 @@
                             android:layout_marginBottom="8dp"
                             android:background="#00FFFFFF"
                             android:onClick="goFlower4"
+                            android:src="@drawable/clavel"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@android:drawable/ic_dialog_map" />
+                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <ImageView
                         android:id="@+id/nombreFlor4"
-                        android:layout_width="182dp"
-                        android:layout_height="44dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@android:drawable/ic_lock_idle_lock" />
+                        android:src="@drawable/nombre4" />
 
                     <ImageButton
                         android:id="@+id/botonMeGusta4"
-                        android:layout_width="95dp"
-                        android:layout_height="71dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="18dp"
                         android:background="#00FFFFFF"
                         android:contentDescription="TODO"
                         android:onClick="like4"
@@ -330,6 +336,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.466"
                         app:layout_constraintStart_toEndOf="@+id/nombreFlor4"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
                         app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -340,6 +347,7 @@
                     android:layout_height="match_parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -356,27 +364,27 @@
                             android:layout_marginBottom="8dp"
                             android:background="#00FFFFFF"
                             android:onClick="goFlower5"
+                            android:src="@drawable/orquidea"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@android:drawable/ic_dialog_map" />
+                            app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <ImageView
                         android:id="@+id/nombreFlor5"
-                        android:layout_width="182dp"
-                        android:layout_height="44dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@android:drawable/ic_lock_idle_lock" />
+                        android:src="@drawable/nombre5" />
 
                     <ImageButton
                         android:id="@+id/botonMeGusta5"
-                        android:layout_width="95dp"
-                        android:layout_height="71dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="18dp"
@@ -388,6 +396,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.466"
                         app:layout_constraintStart_toEndOf="@+id/nombreFlor5"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
                         app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
