--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:color="#e472ba">
+android:color="#585858">
 <item>
     <shape
         android:shape="rectangle">
-        <solid android:color="#ffddee" />
+        <solid android:color="#ffffff" />
     </shape>
 </item>
 </ripple>
