--- a/app/src/main/res/layout/flower1.xml
+++ b/app/src/main/res/layout/flower1.xml
@@ -124,11 +124,13 @@
                 android:textSize="30dp" />
 
             <TextView
+                android:textSize="20sp"
                 android:text="Placeholder"
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/dataTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Datos"
@@ -147,6 +149,7 @@
                     android:src="@drawable/waterdrop" />
 
                 <TextView
+                    android:id="@+id/careTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textColor="@android:color/holo_purple"
@@ -174,6 +177,7 @@
                     android:src="@drawable/region" />
 
                 <TextView
+                    android:id="@+id/regionTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textColor="@android:color/holo_purple"
@@ -201,6 +205,7 @@
                     android:src="@drawable/shop" />
 
                 <TextView
+                    android:id="@+id/availableTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textColor="@android:color/holo_purple"
