--- a/app/src/main/res/layout/flower1.xml
+++ b/app/src/main/res/layout/flower1.xml
@@ -17,7 +17,7 @@
 
 
         <ImageView
-            android:id="@+id/imagenNombreApp"
+            android:id="@+id/logo"
             android:layout_width="279dp"
             android:layout_height="36dp"
             android:background="#00FFFFFF"
